--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
         "lib": "lib"
     },
     "scripts": {
-        "test": "mocha",
+        "test": "grunt test",
         "lint": "jshint tasks && jshint lib"
     },
     "dependencies": {
-        "svg2png": ">= 1.0.0",
-        "q": ">= 0.8.10"
+        "svg2png": "~ 1.0",
+        "q": ">= 0.8.12"
+    },
+    "peerDependencies": {
+        "grunt": "~ 0.4.0"
     },
     "devDependencies": {
-        "coffee-script": ">= 1.4.0",
-        "chai": ">= 1.3.0",
-        "grunt": ">= 0.3.17",
-        "jshint": ">= 0.9.1",
-        "mocha": ">= 1.6.0"
+        "chai": ">= 1.5.0",
+        "grunt": "~ 0.4.0",
+        "grunt-cli": "~ 0.1.6",
+        "grunt-simple-mocha": "~ 0.3.2",
+        "grunt-contrib-clean": "~ 0.4.0",
+        "jshint": ">= 0.9.1"
     }
 }
